# gamedev

lab1/: Cargo.toml
lab1/src/: main.rs  mouse.rs  player.rs  shoot.rs  walk.rs
