[package]
name = "gamedev-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="^0.9"
bevy_rapier3d = {version = "*", features = ["debug-render"]}
bevy_egui="0.17.0"
bevy-inspector-egui="0.14.0"
bevy_prototype_lyon="0.7.2"
